--- a/app/src/main/res/layout/fragment_send_msg.xml
+++ b/app/src/main/res/layout/fragment_send_msg.xml
@@ -197,6 +197,16 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/pushMsgTitle" />
 
+            <CheckBox
+                android:id="@+id/quietMsgCheckBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="התראה שקטה"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/pushMsgBody" />
+
             <Button
                 android:id="@+id/sendPushMsgBtn"
                 android:layout_width="wrap_content"
@@ -205,7 +215,7 @@
                 android:text="שלח הודעה"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/pushMsgBody" />
+                app:layout_constraintTop_toBottomOf="@id/quietMsgCheckBox" />
 
             <Button
                 android:id="@+id/sendTestPushMsgBtn"
